--- a/Nov2021-C.cabal
+++ b/Nov2021-C.cabal
@@ -18,14 +18,14 @@ extra-source-files:  CHANGELOG.md
 
 executable Nov2021-C
   main-is:             Main.hs
-  other-modules:       Console, Buffer2D, Glue, Ticks, SpriteMode,
-                       TextMode, Common, Event, Forge,
-                       Paint, HList, U, Gobbler, Performance,
+  other-modules:       Console, Glue, Ticks,
+                       TextMode, Common, Event, Rainbow,
+                       Paint, HList, U, Performance,
                        TextCtrl, Audio
   -- other-extensions:
   build-depends:       base < 5, GLFW-b, gl, vector, JuicyPixels, containers,
                        random, clock, mtl, comonad, vector, text, sdl2, stm,
-                       libvorbis, bytestring
+                       libvorbis, bytestring, directory
   -- hs-source-dirs:
   default-language:    Haskell2010
   ghc-options:         -O2 -Wall -rtsopts -threaded
