--- a/Nov2021-C.cabal
+++ b/Nov2021-C.cabal
@@ -18,14 +18,14 @@ extra-source-files:  CHANGELOG.md
 
 executable Nov2021-C
   main-is:             Main.hs
-  other-modules:       Glue, Ticks, CmdLine, Arkanoid,
-                       Common, Event, Rainbow,
+  other-modules:       Glue, Ticks, CmdLine, Arkanoid, Grid, Geometry,
+                       Common, Event, Rainbow, Level,
                        Paint, HList, U, Performance,
                        TextCtrl, Audio, CardGame
   -- other-extensions:
   build-depends:       base < 5, GLFW-b, gl, vector, JuicyPixels, containers,
                        random, clock, mtl, comonad, vector, text, sdl2, stm,
-                       libvorbis, bytestring, directory
+                       libvorbis, bytestring, directory, QuickCheck
   -- hs-source-dirs:
   default-language:    Haskell2010
   ghc-options:         -O2 -Wall -rtsopts -threaded
