--- a/Nov2021-C.cabal
+++ b/Nov2021-C.cabal
@@ -25,7 +25,7 @@ executable Nov2021-C
   -- other-extensions:
   build-depends:       base < 5, GLFW-b, gl, vector, JuicyPixels, containers,
                        random, clock, mtl, comonad, vector, text, sdl2, stm,
-                       libvorbis, bytestring, directory, QuickCheck
+                       libvorbis, bytestring, directory, QuickCheck, reflection
   -- hs-source-dirs:
   default-language:    Haskell2010
   ghc-options:         -O2 -Wall -rtsopts -threaded
