now with sandwich and debug support

--- a/Nov2021-C.cabal
+++ b/Nov2021-C.cabal
@@ -20,12 +20,13 @@ executable Nov2021-C
   main-is:             Main.hs
   other-modules:       Glue, Ticks, CmdLine, Arkanoid, Grid, Geometry,
                        Common, Event, Rainbow, Level, Slider, Widget,
-                       Paint, HList, Performance, Device,
-                       TextCtrl, Audio, CardGame
+                       Paint, HList, Performance, Device, Film, SimpleDevice,
+                       TextCtrl, Audio, CardGame, Mailboxes
   -- other-extensions:
   build-depends:       base < 5, GLFW-b, gl, vector, JuicyPixels, containers,
                        random, clock, mtl, comonad, vector, text, sdl2, stm,
-                       libvorbis, bytestring, directory, QuickCheck, reflection
+                       libvorbis, bytestring, directory, QuickCheck, reflection,
+                       some
   -- hs-source-dirs:
   default-language:    Haskell2010
   ghc-options:         -O2 -Wall -rtsopts -threaded
