--- a/Nov2021-C.cabal
+++ b/Nov2021-C.cabal
@@ -19,7 +19,7 @@ extra-source-files:  CHANGELOG.md
 executable Nov2021-C
   main-is:             Main.hs
   other-modules:       Glue, Ticks, CmdLine, Arkanoid, Grid, Geometry,
-                       Common, Event, Rainbow, Level, Slider, Widget,
+                       Common, Event, Rainbow, Level, Slider, Widget, NomYex,
                        Paint, HList, Performance, Component, Film, TimeData,
                        TextCtrl, Audio, CardGame, Mailboxes, Driver2, Laser
   -- other-extensions:
