--- a/Nov2021-C.cabal
+++ b/Nov2021-C.cabal
@@ -21,12 +21,13 @@ executable Nov2021-C
   other-modules:       Glue, Ticks, CmdLine, Arkanoid, Grid, Geometry,
                        Common, Event, Rainbow, Level, Slider, Widget, NomYex,
                        Paint, HList, Performance, Component, Film, TimeData,
-                       TextCtrl, Audio, CardGame, Mailboxes, Driver2, Laser
+                       TextCtrl, Audio, CardGame, Mailboxes, Driver2, Laser,
+                       OneShot, ShapeCompiler, Shape, Dump
   -- other-extensions:
   build-depends:       base < 5, GLFW-b, gl, vector, JuicyPixels, containers,
                        random, clock, mtl, comonad, vector, text, sdl2, stm,
                        libvorbis, bytestring, directory, QuickCheck, reflection,
-                       some, time, profunctors, bifunctors
+                       some, time, profunctors, bifunctors, primitive, plugins
   -- hs-source-dirs:
   default-language:    Haskell2010
   ghc-options:         -O2 -Wall -rtsopts -threaded
